Made it so colour choice is preserved when selecting a different piece

--- a/app/src/main/res/menu/colour_menu.xml
+++ b/app/src/main/res/menu/colour_menu.xml
@@ -12,6 +12,12 @@
     <item android:id="@+id/menu_yellow"
         android:title="Yellow"/>
 
-    <item android:id="@+id/menu_noColour"
-        android:title="Blank"/>
+    <item android:id="@+id/menu_black"
+        android:title="Black"/>
+
+    <item android:id="@+id/menu_white"
+        android:title="White"/>
+
+<!--    <item android:id="@+id/menu_noColour"-->
+<!--        android:title="Blank"/>-->
 </menu>
