Fixed issue where GamePage was trying to use main_activity as the layout

--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -51,7 +51,7 @@
         android:textColor="@android:color/white"
         android:textSize="26sp" />
 
-    <string name="turn_color">Whites turn</string>
+<!--    <string name="turn_color">Whites turn</string>-->
 
     <ImageView
         android:layout_width="100dp"
