Added code for the popup menus on main page, as well as an xml file for the feedback popup

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
         android:layout_width="128dp"
         android:layout_height="60dp"
         android:backgroundTint="#c0aee0"
+        android:onClick="rulesPopup"
         android:text="Rules"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -72,6 +73,7 @@
         android:layout_width="128dp"
         android:layout_height="60dp"
         android:backgroundTint="#c0aee0"
+        android:onClick="feedbackPopup"
         android:text="Contact us"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
