--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -48,7 +48,7 @@
         android:layout_marginTop="107dp"
         android:gravity="center"
         android:text="@string/turn_color"
-        android:textColor="@android:color/white"
+        android:textColor="@color/black"
         android:textSize="26sp" />
 
 <!--    <string name="turn_color">Whites turn</string>-->
