--- a/app/src/main/res/layout/activity_rules_popup.xml
+++ b/app/src/main/res/layout/activity_rules_popup.xml
@@ -68,15 +68,15 @@
     </TextView>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_below="@+id/Rules3"
-        android:layout_height="90dp"
-        android:layout_marginTop="10dp"
         android:id="@+id/Rules4"
-        android:textColor="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_below="@+id/Rules3"
+        android:layout_marginTop="10dp"
         android:gravity="center"
-        android:textSize="20sp"
-        android:text="YOUR AIM IS TO LEAVE YOUR OPPONENT WITH EITHER 2 PIECES OR 0 MOVES. GOODLUCK!">
+        android:text="YOUR AIM IS TO LEAVE YOUR OPPONENT WITH EITHER 2 PIECES OR 0 MOVES. GOODLUCK!"
+        android:textColor="@color/black"
+        android:textSize="20sp">
 
     </TextView>
 
